--- a/index.html
+++ b/index.html
@@ -2,8 +2,40 @@
 <html>
 <head>
 	<title>Ighor</title>
+
+
+	<!-- REACT IMPORT-->
+
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.js"></script>
+
+	
 </head>
 <body>
+	
+	<div id="root"></div>
+
+
 	<p>Hello There, This is just a test!</p>
+
+	<script type="text/jsx">
+	
+
+		class HelloWorld extends React.Component {
+	  render() {
+		// Tells React what HTML code to render
+		return <h1>Hello World</h1>
+	  }
+	}
+	
+	//Tells React to attach the HelloWorld component to the 'root' HTML div
+	ReactDOM.render(<HelloWorld />, document.getElementById("root"))
+	
+	</script>
+	
+	
 </body>
+
+
 </html>
