--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 	<p>Hello There, This is just a test!</p>
 
-	<script type="text/jsx">
-	
-
+	<script type="text/javascript">
+		function 
 		class HelloWorld extends React.Component {
 	  render() {
 		// Tells React what HTML code to render
