--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+<!-- HEADER  -->
  <div class="container-fluid p-1">
   <nav id="nav" class="navbar fixed-top navbar-expand-lg navbar-light">
             <!-- <a class="navbar-brand" href="index.php">
@@ -54,16 +55,22 @@
                     </ul>
             </div>
             </nav>
+<!-- HEADER  -->
 
 
 <!-- ABOUT IGHOR SECTION -->
 
-<!-- <div class="container"> -->
 
 
 <div class="parallax" > 
+  <div id="intro_profile">
+    <br>
+    <br>
+    <br>
+    <p style="font-size:50px"> Hi</p>
+  </div>
   <div id="profile_pic"><br>
-    <br>  
+    <br> 
     <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
 
   </div>
@@ -72,21 +79,20 @@
   <div  class="parallax_aboutme"> IGHOR</div>
 </div>
 
-<!-- <div style="height:500px;background-color:grey;font-size:36px" class="parallax_aboutme"> IGHOR</div> -->
-
 <div class="parallax"></div>
 
-<!-- </div> -->
+
+<!-- ABOUT IGHOR SECTION -->
 
                 
 
 
 
-                    <!--BOOTSRAP -->
-                    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                    <!-- <script src="/javascript/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script> -->
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--BOOTSRAP -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!-- <script src="/javascript/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-                  </body>
-                  </html>
+</body>
+</html>
