--- a/index.html
+++ b/index.html
@@ -49,39 +49,58 @@
             </div>
         </nav>
         <!-- HEADER  -->
-
-
         <!-- ABOUT IGHOR SECTION -->
         <div class="parallax" id="parallax_profile">
             <div class="row">
-                <div class="col-sm-6" id="intro_profile">
-                    <p style="font-size:50px"> Hi There ! I am Ighor Tavares :)</p>
+                <div class="col-sm-4" id="intro_profile">
+                    <p style="font-size:50px"> Hello There !</p>
+                    <p style="font-size:50px"> I am Ighor Tavares</p>
                 </div>
-                <div class="col-sm-6" id="profile_pic"><br>
+                <div class="col-sm-4" id="profile_pic"><br>
                     <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
                 </div>
+                 <div class="col-sm-4 " id="intro_profile">
+                    <p style="font-size:50px"> A passionate Computer Engineer International Student From Brazil</p>
+                </div> 
             </div>
         </div>
+
         <div class="parallax">
-            <div class="parallax_aboutme"> 
-				<div class="row">
-					<div class="col-sm-4">
-						This is about me
-					</div>
-					<div class="col-sm-4">
-						This is about something else
-					</div>
-						<div class="col-sm-4">
-						This is about something else
-					</div>
-				</div>
+            <div class="parallax_aboutme">
+                <div class="row">
+                    <div class="col-sm-4">
+                        I am originally from brazil blah blah blah aaaaaaaaaaaaaaaa
+                    </div>
+                    <div class="col-sm-4">
+                        Those are the languages I am proficient and familiar with:
+                        <ul>
+                            <li>
+                                Python
+                            </li>
+                            <li>
+                                Java
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4">
+                        Here are some projects and work experiences:
+                        <ul>
+                            <li>
+                                <a href="index.html">E-Hacks</a> (Community Impact Winner)
+                            </li>
+                            <li>
+                                ArchHacks
+                            </li>
+                            <li>
+                                WebScrapper
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="parallax"></div>
         <!-- ABOUT IGHOR SECTION -->
-
-
-
         <!--BOOTSRAP -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <!-- <script src="/javascript/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script> -->
