--- a/index.html
+++ b/index.html
@@ -1,111 +1,93 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Ighor</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
+	<title>
+		Ighor Tavares
+	</title>
+
+	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="veryStylish.css">
+
+<!-- FONTNS ARE AWESOME ICONS -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
+
 </head>
-
 <body>
-    <!-- HEADER  -->
-    <div class="container-fluid p-1">
-        <nav id="nav" class="navbar fixed-top navbar-expand-lg navbar-light">
-            <!-- <a class="navbar-brand" href="index.php">
-                <img class="kumquat-header" src="imgs/kumquat_outline.png" alt="kumquat">
-                KUMQUAT
-              </a> -->
-            <p> Welcome </p>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/ighor-tavares-101b75b7/">
-                            <img src="images/linkedin_logo.png" alt="" id="links_logo"> LinkeIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/itavares">
-                            <img src="images/github_logo.png" alt="" id="links_logo"> GitHub</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/ighorfenili.tavares">
-                            <img src="images/facebook_logo.png" alt="" id="links_logo">
-                            Facebook</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="https://github.com/itavares/e-hacks-2019-washu" target="_blank">
-                            <button id="downloadBtn" class="btn-sm btn-success mx-3 align-self-center">GitHub</button>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!-- HEADER  -->
-        <!-- ABOUT IGHOR SECTION -->
-        <div class="parallax" id="parallax_profile">
-            <div class="row">
-                <div class="col-sm-4" id="intro_profile">
-                    <p style="font-size:50px"> Hello There !</p>
-                    <p style="font-size:50px"> I am Ighor Tavares</p>
-                </div>
-                <div class="col-sm-4" id="profile_pic"><br>
-                    <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
-                </div>
-                 <div class="col-sm-4 " id="intro_profile">
-                    <p style="font-size:50px"> A passionate Computer Engineer International Student From Brazil</p>
-                </div> 
-            </div>
-        </div>
+	
 
-        <div class="parallax">
-            <div class="parallax_aboutme">
-                <div class="row">
-                    <div class="col-sm-4">
-                        I am originally from brazil blah blah blah aaaaaaaaaaaaaaaa
-                    </div>
-                    <div class="col-sm-4">
-                        Those are the languages I am proficient and familiar with:
-                        <ul>
-                            <li>
-                                Python
-                            </li>
-                            <li>
-                                Java
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4">
-                        Here are some projects and work experiences:
-                        <ul>
-                            <li>
-                                <a href="index.html">E-Hacks</a> (Community Impact Winner)
-                            </li>
-                            <li>
-                                ArchHacks
-                            </li>
-                            <li>
-                                WebScrapper
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="parallax"></div>
-        <!-- ABOUT IGHOR SECTION -->
-        <!--BOOTSRAP -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <!-- <script src="/javascript/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<center>
+		<h2 style="font-size: 80px; margin-top:10px;">
+            <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
+		</h2>
+
+    <center>
+    
+        <pre class="table">
+     
+|=----------------------------------------------------------------------------=|
+|=-------------------------=[ <font color="white">Ighor Fenili Tavares</font> ]=-------------------------=|
+|=-----------------=[ <font color="white">Washington University in Saint Louis </font> ]=----------------=|
+|=----------------------------------------------------------------------------=|
+|=-----------------------------=[ <font color="white">Class 2020</font> ]=-------------------------------=|
+|=--------------------------=[ <font color="white">f.tavares@wustl.edu</font> ]=-------------------------=|
+|=----------------------------------------------------------------------------=|
+|=---------=[ <font color="white">B.S Computer Science | M.S Cybersecurity Engineering</a></font> ]=---------=|
+|=----------------------------------------------------------------------------=|
+|=-----------------------=[ <font color="#00FF00	"> Member of b34r5hell CTF </font>]------------------------=|
+|=----------------------------------------------------------------------------=|
+    </pre>
+     <pre class="table2">
++=======+$Man Ighor_Tavares====================================================+
++=======+======================================================================+
+|      <font color="red">	                       <--=[About Me]=-->                             </font> |
+|       | ---------------------------------------------------------------------|
+|       | <font color="white">Hello there ! I am Ighor Tavares, an international student from     </font> |
+|       | <font color="white">Brazil. I obtained a degree in Natural Science with a minor in      </font> |
+|       | <font color="white">mathematics at York College and I am now in my second year of       </font> |
+|       | <font color="white">at Washington University working towards my B.S in Computer Science </font> |
+|       | <font color="white">and in my master’s in Cybersecurity engineering.                    </font> |
++-------+----------------------------------------------------------------------+
+|      <font color="red">	                   <--=[Projects + Experiences ]=-->                  </font> |
+|       | ---------------------------------------------------------------------|
+|       | <font color="white">==><a href="index.html"> E-Hacks</a> (Community Impact Winner)                               </font> |
+|       | <font color="white">==><a href="index.html"> ArchHacks<a> Hack-a-Thon	   		                      </font> |
+|       | <font color="white">==> Student IT Technician (Washington University in Saint Louis)    </font> |
+|       | <font color="white">==> Web Scraping Student Assistant (Python)                         </font> |
++-------+----------------------------------------------------------------------+
++-------+----------------------------------------------------------------------+
+|      <font color="red">	                        <--=[Sum Skills]=-->                          </font> |
+|       | ---------------------------------------------------------------------|
+|       | <font color="white">-print("<font color="yellow">Python</font>")                                                    </font> |
+|       | <font color="white">-<?php>echo "<font color="yellow">HTML, PHP, JS</font>" ;<?>                                             </font> |
+|       | <font color="white">-System.out.printl("<font color="yellow">Java</font>");                                         </font> |
+|       | <font color="white">-std::cout << "<font color="yellow">C++</font>" << std::endl;                                   </font> |
+|       | <font color="white">-char name[] = "<font color="yellow">C</font>"; printf("%s",name);"                             </font> |
+
++-------+----------------------------------------------------------------------+
+
+
+        </pre>
+
+
+
+
+
+	</center>
+
+
+
+
+
+
+<!--BOOTSRAP -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <!-- <script src="/javascript/jquery-3.3.1.js" type="text/javascript" charset="utf-8" async defer></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-
 </html>
