--- a/index.html
+++ b/index.html
@@ -71,15 +71,23 @@
 |       | <font color="white">==><a href="https://github.com/itavares/e-hacks-2019-washu"> E-Hacks</a> (Community Impact Winner)                               </font> |
 |       | <font color="white">==><a href="https://github.com/akintundejr4/ArchHacks2017"> ArchHacks<a> Hack-a-Thon	   		                      </font> |
 |       | <font color="white">==> Some School Work:                                               </font> |
-|       | <font color="white">         _-_ <a href="https://github.com/itavares/CSE422S--Operating-Systems-Organizations">CSE 422</a> - Operation Systems Organizations              </font> |
-|       | <font color="white">         _-_ <a href="https://github.com/itavares/CSE330-Rapid-Prototype-Developement-and-Creative-Programming">CSE 330</a> - Rapid Prototype Development                  </font> |
-|       | <font color="white">         _-_ <a href="https://github.com/itavares/Temporal-Link-Prediction-and-Community-Detection">CSE 416</a> - Analysis of Network Data                     </font> |
+|       | <font color="white">      _-_ <a href="https://github.com/itavares/CSE422S--Operating-Systems-Organizations">CSE 422</a> - Operation Systems Organizations                 </font> |
+|       | <font color="white">      _-_ <a href="https://github.com/itavares/CSE330-Rapid-Prototype-Developement-and-Creative-Programming">CSE 330</a> - Rapid Prototype Development                     </font> |
+|       | <font color="white">      _-_ <a href="https://github.com/itavares/Temporal-Link-Prediction-and-Community-Detection">CSE 416</a> - Analysis of Network Data                        </font> |
 |       | <font color="white">==> Summer 2019 - Master's Project                                  </font> |
-|       | <font color="white">         _-_ For this summer, I am working on IoT security and its  </font> |
-|       | <font color="white">         _-_  vulnerabilities. I will explore the dangers and lack  </font> |
-|       | <font color="white">         _-_  of security present in cheap IoT devices that can be  </font> |
-|       | <font color="white">         _-_  purchased for less than $15 and impose a major treat  </font> |
-|       | <font color="white">         _-_  to the user. (Future notes will be posted here)       </font> |
+|       | <font color="white">      _-_ For this summer, I am working on IoT security and its     </font> |
+|       | <font color="white">            vulnerabilities. I will explore the dangers and lack    </font> |
+|       | <font color="white">            of security present in cheap IoT devices that can be    </font> |
+|       | <font color="white">            purchased for less than $15 and impose a major treat    </font> |
+|       | <font color="white">            to the user.                                            </font> |
+|       | <font color="white">==> Summer 2019 - Student Penetration Tester                        </font> |
+|       | <font color="white">      _-_ I was invited to conduct penetration tests on new public  </font> |
+|       | <font color="white">            and staff machines at my IT work. I conducted the test  </font> |
+|       | <font color="white">            from an insider threat perspective. I also developed    </font> |
+|       | <font color="white">            malwares and phishing e-mails to test the integrity of  </font> |
+|       | <font color="white">            deployable computer images and I was able to penetrate  </font> |
+|       | <font color="white">            the library network utilizing various methods and       </font> |
+|       | <font color="white">            techniques (withheld for operational security)          </font> |
 +-------+----------------------------------------------------------------------+
 +-------+----------------------------------------------------------------------+
 |      <font color="red">	                        <--=[Skills]=-->                              </font> |
@@ -89,8 +97,10 @@
 |       | <font color="white">-System.out.printl("<font color="yellow">Java</font>");                                         </font> |
 |       | <font color="white">-std::cout << "<font color="yellow">C++</font>" << std::endl;                                   </font> |
 |       | <font color="white">-char name[] = '<font color="yellow">C</font>'; printf("%s",name);                              </font> |
+|       | <font color="white">-shell=$"hello linux"; echo "$<font color="yellow">shell</font>";                               </font> |
+
 +-------+----------------------------------------------------------------------+
-|      <font color="red">                           <--=[Hobbies]=-->                           </font> |
+|      <font color="red">                          <--=[Hobbies]=-->                            </font> |
 |       | ---------------------------------------------------------------------|
 |       | <font color="yellow">                          *** CTF ***                               </font> |
 |       | <font color="white"> I am CTF lover, who is always looking for competitions and         </font> |
@@ -98,18 +108,27 @@
 |       | <font color="white"> team , b34r5hell, at Washington University. You can find our last  </font> |
 |       | <font color="white"> competition results at the bottom this website (in the workings)   </font> |
 |       |                                                                      |
-|       | <font color="yellow">                        *** Python ***                              </font> |
+|       | <font color="yellow">                          *** Hacking ***                           </font> |
+|       | <font color="white"> I have became an hacking enthusiastic . From working as            </font> |
+|       | <font color="white"> an IT and performing penetration tests, to simply developing small </font> |
+|       | <font color="white"> hacking tools, I am always looking foward to "break" things. One of</font> |
+|       | <font color="white"> favorite moments was when I was able to simply delete an local     </font> |
+|       | <font color="white"> admin account's password from a staff computer with kali linux     </font> |
+|       | <font color="white"> and have full access to the network, files, etc. Of course, this   </font> |
+|       | <font color="white"> was done under my boss supervision and authorization.              </font> |
+|       |                                                                      |
+|       | <font color="yellow">                          *** Python ***                            </font> |
 |       | <font color="white"> I enjoy making using python to automate my daily life. I love      </font> |
 |       | <font color="white">  learning new libraries and write programs for fun. I have         </font> |
 |       | <font color="white">  recently created a couple facebook bots, and a auto-search        </font> |
 |       | <font color="white">  script that uses voice recogniztion (similar to google home).     </font> |
 |       |                                                                      |
-|       | <font color="yellow">                       *** Videography ***                          </font> |
+|       | <font color="yellow">                          *** Videography ***                       </font> |
 |       | <font color="white"> I love making/editing videos. It is a way to express my creativity </font> |
 |       | <font color="white"> and explore diferent perspectives about how we see the world. I    </font> |
 |       | <font color="white"> have a couple projects on my vimeo account.                        </font> |
 |       |                                                                      |
-|       | <font color="yellow">                        *** Readings ***                            </font> |
+|       | <font color="yellow">                          *** Readings ***                          </font> |
 |       | <font color="white">Kali Linux Network Scanning Cookbook - Justin Hutchens              </font> |
 |       | <font color="white">Internet Identity - Ted Claypoole and Theresa Payton.               </font> |
 +-------+----------------------------------------------------------------------+
