--- a/resume_page.html
+++ b/resume_page.html
@@ -98,7 +98,7 @@
 						</div>
 						<div class="yui-u">
 						
-								<li><strong>Programming Language</strong> : Proficient in Python, C++ ;  Familiar with C, Java , Swift, JS, PHP, HTML  </li>
+								<li><strong>Programming Language</strong> : Proficient in Python, C++ ;  Familiar with C, Java , Swift, JS, PHP, HTML, Shell  </li>
 								<li><strong>Software </strong> : Git, MS Office, Eclipse, Visual Studio, Wireshark, Burpsuite</li>
 								<li ><strong>Hardware and Platform</strong> : Linux, Windows, MySQL, Metasploit, Arduino, Raspberry Pi </li>
 								<li class="last"> <strong> Languages</strong> : Portuguese (Native), English (Fluent) </li>
