--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
 		</h2>
 
-    <p> <a href="index.html"> <i class="fab fa-facebook" style="font-size: 50px"></i></a>|| <a href="index.html"><i class="fab fa-github" style="font-size: 50px"></i></a> || <a href="index.html"><i class="fab fa-linkedin" style="font-size: 50px""></i></a>|| <a href="https://drive.google.com/open?id=1Tl_qYRkf20IwL1e8C4fVyWxHK3_jiw1P"><i class="far fa-file-alt" style="font-size: 50px""></i></a></p>
+    <p> <a href="index.html"> <i class="fab fa-facebook" style="font-size: 50px"></i></a>|| <a href="index.html"><i class="fab fa-github" style="font-size: 50px"></i></a> || <a href="index.html"><i class="fab fa-linkedin" style="font-size: 50px""></i></a>|| <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1"><i class="far fa-file-alt" style="font-size: 50px""></i></a></p>
 
     <center>
 
@@ -54,7 +54,7 @@
 
  <!-- <button type="button" onclick="displayTerminal()">Terminal</button> -->
 
-   <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1" class="button5" style="background-color:#42cc8c;">Resume</a>
+  <!--  <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1" class="button5" style="background-color:#42cc8c;">Resume</a> -->
 
     </pre>
      <pre class="table2">
