--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
 |       | <font color="yellow">                          *** CTF ***                               </font> |
 |       | <font color="white"> I am CTF lover, who is always looking for competitions and         </font> |
 |       | <font color="white"> challenges. I am currently an "administrator" for my school's CTF  </font> |
-|       | <font color="white"> team , b34r5hell, at Washington University. You can find our last  </font> |
-|       | <font color="white"> competition results at the bottom this website (in the workings)   </font> |
+|       | <font color="white"> team , b34r5hell, at Washington University.                        </font> |
+|       | <font color="white"> Latests Accomplishments:                                           </font> |
+|       | <font color="white">      _-_ STLCyberUP NCSAMCTF 2019 - <font color="#00FF00	"> 4th Place </font>                    </font> |
 |       |                                                                      |
 |       | <font color="yellow">                          *** Hacking ***                           </font> |
 |       | <font color="white"> I have became an hacking enthusiastic . From working as            </font> |
