--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="images/ighor_profile.jpg" alt="ighor" id="ighor_profile">
 		</h2>
 
-    <p> <a href="index.html"> <i class="fab fa-facebook" style="font-size: 50px"></i></a>|| <a href="index.html"><i class="fab fa-github" style="font-size: 50px"></i></a> || <a href="index.html"><i class="fab fa-linkedin" style="font-size: 50px""></i></a>|| <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1"><i class="far fa-file-alt" style="font-size: 50px""></i></a></p>
+    <p> <a href="https://www.facebook.com/ighorfenili.tavares"> <i class="fab fa-facebook" style="font-size: 50px"></i></a>|| <a href="https://github.com/itavares"><i class="fab fa-github" style="font-size: 50px"></i></a> || <a href="https://www.linkedin.com/in/ighor-tavares-101b75b7/"><i class="fab fa-linkedin" style="font-size: 50px""></i></a>|| <a href="https://drive.google.com/open?id=1NTNg8ivOd_ySJguVCPYH5JKs2Aj_X18v"><i class="far fa-file-alt" style="font-size: 50px""></i></a></p>
 
     <center>
 
@@ -52,7 +52,6 @@
 |=-----------------------=[ <font color="#00FF00	"> Member of b34r5hell CTF </font>]------------------------=|
 |=----------------------------------------------------------------------------=|
 
- <!-- <button type="button" onclick="displayTerminal()">Terminal</button> -->
 
   <!--  <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1" class="button5" style="background-color:#42cc8c;">Resume</a> -->
 
@@ -64,13 +63,13 @@
 |       | ---------------------------------------------------------------------|
 <div class="hover_img">|       | <font color="white"><a href="#">Hello there <span><img src="images/hellothere.gif" alt="image" height="100" /></span></a> ! I am Ighor Tavares, an international student from    </font> |
 |       | <font color="white">Brazil. I have obtained a degree in Natural Science with a minor in </font> |
-|       | <font color="white">mathematics at York College. I am now in my second year             </font> |
-|       | <font color="white">at Washington University working towards my B.S in Computer Science </font> |
-|       | <font color="white">and in my master’s in Cybersecurity engineering.                    </font> |</div> 
+|       | <font color="white">mathematics at York College, and I have graduated with my B.S in    </font> |
+|       | <font color="white">Computer Science at Washington University in Siant Louis. I am      </font> |
+|       | <font color="white">currently finishing my masters in Cybersecurity Engineering.        </font> |</div> 
 +-------+----------------------------------------------------------------------+
 |      <font color="red">	                   <--=[Projects + Experiences ]=-->                  </font> |
 |       | ---------------------------------------------------------------------|
-|       | <font color="white">==> Student IT Technician (Washington University in Saint Louis)    </font> |
+|       | <font color="white">==> Student IT Technician - Admin  (WashU)                          </font> |
 |       | <font color="white">==> Web Scraping Student Assistant (Python)                         </font> |
 |       | <font color="white">==><a href="https://github.com/itavares/e-hacks-2019-washu"> E-Hacks</a> (Community Impact Winner)                               </font> |
 |       | <font color="white">==><a href="https://github.com/akintundejr4/ArchHacks2017"> ArchHacks<a> Hack-a-Thon	   		                      </font> |
@@ -114,7 +113,7 @@
 |       | <font color="white">      _-_ STLCyberUP NCSAMCTF 2019 - <font color="#00FF00	"> 4th Place </font>                    </font> |
 |       |                                                                      |
 |       | <font color="yellow">                          *** Hacking ***                           </font> |
-|       | <font color="white"> I have became an hacking enthusiastic . From working as            </font> |
+|       | <font color="white"> I have became an hacking enthusiastic. From working as             </font> |
 |       | <font color="white"> an IT and performing penetration tests, to simply developing small </font> |
 |       | <font color="white"> hacking tools, I am always looking foward to "break" things. One of</font> |
 |       | <font color="white"> favorite moments was when I was able to simply delete an local     </font> |
@@ -134,10 +133,18 @@
 |       | <font color="white"> have a couple projects on my vimeo account.                        </font> |
 |       |                                                                      |
 |       | <font color="yellow">                          *** Readings ***                          </font> |
-|       | <font color="white"> Kali Linux Network Scanning Cookbook - Justin Hutchens             </font> |
-|       | <font color="white"> Internet Identity - Ted Claypoole and Theresa Payton.              </font> |
+|       | <font color="white"> Learning new skills is something I love to do during free time.    </font> |
+|       | <font color="white"> Here is a list of some of my favorite books for learning/reading:  </font> |
+|       | <font color="white"> -Kali Linux Network Scanning Cookbook - Justin Hutchens            </font> |
+|       | <font color="white"> -Internet Identity - Ted Claypoole and Theresa Payton.             </font> |
+|       | <font color="white"> -The Linux Command Line - William E Shotts,Jr.                     </font> |
+|       | <font color="white"> -Hacking The Art of Exploitation - Jon Erickson                    </font> |
+|       | <font color="white"> -Wicked Cool Shell Scripts - Dave Taylor and Brandon Perry         </font> |
+|       | <font color="white"> -Cracking Code With Python - Al Sweigart                           </font> |
+|       | <font color="white"> -Penetration Testing - Georgia Weidman                             </font> |
 +-------+----------------------------------------------------------------------+
 
+<button type="button" onclick="displayTerminal()">Terminal</button> 
 
 <!-- { jung_vf_guvf_jrveq_zrffntr_va_ebg13 } what?!  -->
         </pre>
@@ -163,7 +170,9 @@
       // document.body.appendChild(terminal.html);
       document.getElementById("terminal").appendChild(terminal.html); 
       terminal.blinkingCursor(true);
-      terminal.print('Hello, there!');
+      terminal.print('Hello, there! I am still in developement...');
+      terminal.print("So I don't much right now ...");
+
 
 
       function ask_again(terminal){
@@ -175,12 +184,12 @@
         var terminalChild3 = document.getElementById("ter_message");
          terminalChild3.parentNode.removeChild(terminalChild3);
           // temrinalChild.removeChild(terminalChild.firstChild);
-        terminal.input('Enter one of the following commands: resume, more-to-come ', function (input) {
+        terminal.input('Enter  the following commands: CTF ', function (input) {
             // terminal.print('>');
-              if (input == "resume"){
-                alert("taking to resume page");
+              if (input == "CTF"){
+                alert("Taking you to our mini CTF!");
                 //shows resume in nice format =) 
-                window.location = "resume_page.html";
+                window.location = "https://github.com/itavares/bearCTFmini";
               }
               else{
                 terminal.print("I don't know this command !!!!");
@@ -195,12 +204,12 @@
         terminal.print('Welcome, ' + input);
         terminal.sleep(1000, function () {
           terminal.print(' ');
-          terminal.input('Enter one of the following commands: resume, more-to-come ', function (input) {
+          terminal.input('Enter  the following commands: CTF ', function (input) {
             // terminal.print('>');
-              if (input == "resume"){
-                alert("taking to resume page");
+              if (input == "CTF"){
+                alert("Taking you to our mini CTF!");
                 //shows resume in nice format =) 
-                window.location = "resume_page.html";
+                window.location = "https://github.com/itavares/bearCTFmini";
               }
               else{
                 terminal.print("I don't know this command !!!!");
@@ -220,23 +229,7 @@
 
 <script type="text/javascript">
 
-  
-  // console.log(secretHehe);
 
-// function calculatorFunction(){
-//   var num1 = document.getElementById("hellothere").value;
-
-
-//  document.getElementById("hellothere").addEventListener("keyup",calculatorFunction);
-//  console.log(num1);
-
-//  if (num1 == "what_is_this_weird_message_in_rot13"){
-//   console.log("CORRECT");
-//   alert("Hello There");
-//  }
- 
-// }
-// calculatorFunction();
 
 
 eval(function(p,a,c,k,e,d){e=function(c){return c.toString(36)};if(!''.replace(/^/,String)){while(c--){d[c.toString(a)]=k[c]||c.toString(a)}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('7 0(){8 1=4.2("3").a;4.2("3").9("h",0);5.6(1);b(1=="e"){5.6("c");d("g f")}}0();',18,18,'calculatorFunction|num1|getElementById|hellothere|document|console|log|function|var|addEventListener|value|if|CORRECT|alert|what_is_this_weird_message_in_rot13|There|Hello|keyup'.split('|'),0,{}))
