--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       document.getElementById("terminal").appendChild(terminal.html); 
       terminal.blinkingCursor(true);
       terminal.print('Hello, there! I am still in developement...');
-      terminal.print("So I don't much right now ...");
+      terminal.print("So I don't do much right now ...");
 
 
 
