--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 |       | <font color="white">            the library network utilizing various methods and       </font> |
 |       | <font color="white">            techniques (withheld for operational security)          </font> |
 +-------+----------------------------------------------------------------------+
-+-------+----------------------------------------------------------------------+
 |      <font color="red">	                        <--=[Skills]=-->                              </font> |
 |       | ---------------------------------------------------------------------|
 |       | <font color="white">-print("<font color="yellow">Python</font>")                                                    </font> |
@@ -101,7 +100,6 @@
 |       | <font color="white">-std::cout << "<font color="yellow">C++</font>" << std::endl;                                   </font> |
 |       | <font color="white">-char name[] = '<font color="yellow">C</font>'; printf("%s",name);                              </font> |
 |       | <font color="white">-shell=$"hello linux"; echo "$<font color="yellow">shell</font>";                               </font> |
-
 +-------+----------------------------------------------------------------------+
 |      <font color="red">                          <--=[Hobbies]=-->                            </font> |
 |       | ---------------------------------------------------------------------|
@@ -110,6 +108,7 @@
 |       | <font color="white"> challenges. I am currently an "administrator" for my school's CTF  </font> |
 |       | <font color="white"> team , b34r5hell, at Washington University.                        </font> |
 |       | <font color="white"> Latests Accomplishments:                                           </font> |
+|       | <font color="white">      _-_ STLCybercon CTF 2019     - <font color="#00FF00	"> 1th Place </font>                    </font> |
 |       | <font color="white">      _-_ STLCyberUP NCSAMCTF 2019 - <font color="#00FF00	"> 4th Place </font>                    </font> |
 |       |                                                                      |
 |       | <font color="yellow">                          *** Hacking ***                           </font> |
