--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="hover_img">|       | <font color="white"><a href="#">Hello there <span><img src="images/hellothere.gif" alt="image" height="100" /></span></a> ! I am Ighor Tavares, an international student from    </font> |
 |       | <font color="white">Brazil. I have obtained a degree in Natural Science with a minor in </font> |
 |       | <font color="white">mathematics at York College, and I have graduated with my B.S in    </font> |
-|       | <font color="white">Computer Science at Washington University in Siant Louis. I am      </font> |
+|       | <font color="white">Computer Science at Washington University in Saint Louis. I am      </font> |
 |       | <font color="white">currently finishing my masters in Cybersecurity Engineering.        </font> |</div> 
 +-------+----------------------------------------------------------------------+
 |      <font color="red">	                   <--=[Projects + Experiences ]=-->                  </font> |
@@ -107,7 +107,7 @@
 |       | <font color="white"> I am CTF lover, who is always looking for competitions and         </font> |
 |       | <font color="white"> challenges. I am currently an "administrator" for my school's CTF  </font> |
 |       | <font color="white"> team , b34r5hell, at Washington University.                        </font> |
-|       | <font color="white"> Latests Accomplishments:                                           </font> |
+|       | <font color="white"> Latest Accomplishments:                                            </font> |
 |       | <font color="white">      _-_ STLCybercon CTF 2019     - <font color="#00FF00	"> 1th Place </font>                    </font> |
 |       | <font color="white">      _-_ STLCyberUP NCSAMCTF 2019 - <font color="#00FF00	"> 4th Place </font>                    </font> |
 |       |                                                                      |
